# detect-arrow

./: .gitignore  01_extract_raw_data.py  02_setup_cnn.py  03_calibrate_camera.py  04_estimate_transformation_in_image.py  05_estimate_transformation_in_camera.py  README.md  TODOs.csv  arrow_ai.pkl.REMOVED.git-id  cam_data.txt  coords_of_arrow.txt  environment.yaml  extract_features.py  false_features.npy  gaussian_process_train.py  implementation_plan.odg  pyproject.toml  right_features.npy  security_issues.csv  shape_reference.npy  sign_ai.pkl  sign_features.npy  sign_target.npy  support_functions.py  test_camera.py  test_picture.py  test_real_picture.py  train_arrows.py
cam-config/: dist.txt  mtx.txt
conf/: img_consts.py  path_consts.py
detectarrow/: 01_extract_raw_data.py  02_setup_cnn.py  03_calibrate_camera.py  03_validate_cnn.py  04_calibrate_camera.py  04_estimate_transformation_in_image.py  05_estimate_transformation_in_camera.py  05_estimate_transformation_in_image.py  06_estimate_transformation_in_camera.py  06_improve_data_extraction.py  07_extract_false_positives.py  07_improve_data_extraction.py  08_extract_false_positives.py
io/: video.py
main/: 01_extract_raw_data.py  02_setup_cnn.py  03_calibrate_camera.py  04_estimate_transformation_in_image.py  05_estimate_transformation_in_camera.py  06_improve_data_extraction.py  1_get_pictures_for_cnn.ipynb  2_setup_cnn.ipynb  4_estimate_position.ipynb  5_camera_position_estimation.ipynb  arrow_target.npy  bad_norm_values.npy  good_values.npy  setup_new_detection.ipynb  test_picture.py
model/: arrow_detection.keras
models/: arrow_detection_1.keras  arrow_detection_2.keras  arrow_detection_3.keras
notebooks/: 1_get_pictures_for_cnn.py  2_setup_cnn.py  3_calibrate_camera.py  4_estimate_position.py  5_camera_position_estimation.py  extract_function.py
printed-arrow/: coords_of_arrow.txt
printed-values/: calibration_measurements.json  coords_of_arrow.txt
processing/: calibrate.py  model_handler.py  preparation.py  utils.py
src/: 1_get_pictures_for_cnn.ipynb  2_setup_cnn.ipynb  3_calibrate_camera.ipynb  3_estimate_position.ipynb  4_estimate_position.ipynb  arrow_detection.keras  arrow_detection.keras.REMOVED.git-id  arrow_features.npy  bad_values.npy  cam_data.txt  (+9 more)
(+20 files in other folders)
